-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8u401, 9
-
Component/s: hotspot
-
b120
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0xfffffff8c72271bc, pid=24268, tid=35
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-10-224000.jmasamit.jdk9-full-test)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-10-224000.jmasamit.jdk9-full-test, mixed mode, tiered, compressed oops, parallel gc, solaris-sparc)
# Problematic frame:
# V [libjvm.so+0xf271bc] void ParCompactionManager::push_recycled_stack_index(unsigned)+0x54
#
# Core dump will be written. Default location: /aurora/sandbox/refworkload/benchmarks/specjbb2005/core or core.24268
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0xfffffff8c72271bc, pid=24268, tid=35
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-10-224000.jmasamit.jdk9-full-test)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-10-224000.jmasamit.jdk9-full-test, mixed mode, tiered, compressed oops, parallel gc, solaris-sparc)
# Problematic frame:
# V [libjvm.so+0xf271bc] void ParCompactionManager::push_recycled_stack_index(unsigned)+0x54
#
# Core dump will be written. Default location: /aurora/sandbox/refworkload/benchmarks/specjbb2005/core or core.24268
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
- relates to
-
JDK-8155966 Assertion failures when -XX:+UseParallelGC -XX:ParallelGCThreads=1
-
- Resolved
-
-
JDK-8358928 TestDynamicNumberOfGCThreads.java crashed with EXCEPTION_ACCESS_VIOLATION (0xc0000005)
-
- Open
-