8150994: UseParallelGC fails with UseDynamicNumberOfGCThreads with specjbb2005

Reviewed-by: tschatzl, kbarrett